src/test/ui/did_you_mean/issue-49746-unicode-confusable-in-float-literal-expt.stderr
error: expected at least one digit in exponent
  --> $DIR/issue-49746-unicode-confusable-in-float-literal-expt.rs:1:53
   |
LL | const UNIVERSAL_GRAVITATIONAL_CONSTANT: f64 = 6.674e−11; // m³⋅kg⁻¹⋅s⁻²
   |                                                     ^
help: Unicode character '−' (Minus Sign) looks like '-' (Minus/Hyphen), but it is not
   |
LL | const UNIVERSAL_GRAVITATIONAL_CONSTANT: f64 = 6.674e-11; // m³⋅kg⁻¹⋅s⁻²
   |                                                     ^

error: aborting due to previous error

